--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                                 NYC, USA</h5> -->
 
                                             <p>Front End Developer with an experience in structuring, developing, and implementing Websites. Web Developer with proven ability to communicate effectively, both internally and externally, with multiple levels of an organization.</p>
-                                            <button class="btn main-btn my-4"><a href="Aryan-CV.pdf" download class="main-btn">Download CV</a></button>
+                                            <button class="btn main-btn my-4"><a href="Aryan_Resume.pdf" download class="main-btn">Download CV</a></button>
                                         </div>
                                      </div>
                                 </div>
