--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                                             <div class="row">
                                                 <div class="col-lg-4 col-sm-6 mb-4">
                                                     <div class="portfolio-img">
-                                                        <a href="/elements/checkout/index.html" target="_blank"><img decoding="async" src="./elements/element-img/1.jpg" class="w-100 h-100"></a>
+                                                        <a href="https://iaryansingh.github.io/checkout/" target="_blank"><img decoding="async" src="./elements/element-img/1.jpg" class="w-100 h-100"></a>
                                                         
                                                     </div>
                                                 </div>
@@ -391,7 +391,6 @@
                                                 <div class="col-lg-4 col-sm-6 mb-4">
                                                     <div class="portfolio-img">
                                                         <a href="/elements/login-1.html" target="_blank"><img decoding="async" src="./elements/element-img/4.jpg" class="w-100 h-100"></a>
-                                                       
                                                     </div>
                                                 </div> 
                                             </div>
